--- a/Views/News/Index.cshtml
+++ b/Views/News/Index.cshtml
@@ -61,8 +61,9 @@
     </p>
 
     <!-- Story content -->
-    <!-- TODO: render on server with ss markdown -->
-    <markdown data-ng-init="news.loadStory(@story.id)" data-ignore="">{{news[@story.id]}}</markdown>
+    <markdown class="article-content"
+        data-ng-init="news.loadStory(@story.id)"
+        data-ignore="">{{news[@story.id]}}</markdown>
     
     <!-- Story comments -->
     <div class="comments" data-ng-init="news.loadComments(@story.id)">
