Fix #69 Add Mozilla Font Smoothing OSX High Dpi

--- a/Styles/_media.desktop.scss
+++ b/Styles/_media.desktop.scss
@@ -2,6 +2,7 @@ header
 {
     font-family: $title-font;
     -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
     background: $primary-color;
     color: $primary-text-color;
     min-width: 349px;
