Move comment error inside the form

--- a/Styles/_media.desktop.scss
+++ b/Styles/_media.desktop.scss
@@ -897,6 +897,11 @@ a.author:hover
     resize: vertical;
 }
 
+.comment-error
+{
+    margin-left: 12pt;
+}
+
 .callout
 {
     position: absolute;
