--- a/Views/Shared/Register.cshtml
+++ b/Views/Shared/Register.cshtml
@@ -34,7 +34,8 @@
         id="defaultInput"
         name="name"
         placeholder="Type your name"
-        value="@defaultName"/>
+        value="@defaultName"
+        tabindex="1"/>
 </form>
 
 <!-- Buttons are merged with popup layout buttons -->
@@ -44,6 +45,7 @@
 
     <button type="submit"
         class="button-form button-right"
+        tabindex="2"
         onclick="registration.submit()"
         data-primary>
         <icon class="icon-button"
