--- a/Styles/_shared.scss
+++ b/Styles/_shared.scss
@@ -39,24 +39,32 @@ $title-font: Consolas, Menlo, monospace;
 $title-font-size: 12pt;
 $title-font-weight: normal;
 
-$navigation-font-size: 14px;
-
 /* Helvetica Neue is available only on Mac */
 /* Calibri is available only on PC */
 $heading-font: "Helvetica Neue", Calibri, sans-serif;
-$heading-font-size-large: 20px;
-$heading-font-size-medium: 17px;
+$heading-font-size-large: 13pt;
+$heading-font-size-medium: 11pt;
 $heading-font-size-small: 10pt;
 
 $normal-font: "Segoe UI", Verdana, sans-serif;
-$normal-font-size: 14px;
+$normal-font-size: 10pt;
+$navigation-font-size: $normal-font-size;
 
 $small-font: $normal-font;
-$small-font-size: 12.5px;
+$small-font-size: 9pt;
 
 $fallback-font: sans-serif;
 
 $background-font: Arial;
+
+.ua-win.hi-dpi
+{
+    $navigation-font-size: 14px;
+    $heading-font-size-large: 20px;
+    $heading-font-size-medium: 17px;
+    $normal-font-size: 14px;
+    $small-font-size: 12.5px;
+}
 
 /*
  * Scalars
