Fix #14 Open Sans for headings

--- a/Styles/_shared.scss
+++ b/Styles/_shared.scss
@@ -42,7 +42,7 @@ $title-font-weight: normal;
 
 /* Helvetica Neue is available only on Mac */
 /* Calibri is available only on PC */
-$heading-font: "Helvetica Neue", Calibri, sans-serif;
+$heading-font: "Open Sans", "Helvetica Neue", Calibri, sans-serif;
 $heading-font-size-large: 13pt;
 $heading-font-size-medium: 11.5pt;
 $heading-font-size-small: 10pt;
