--- a/Views/Index.cshtml
+++ b/Views/Index.cshtml
@@ -10,6 +10,7 @@
         
         <title>01 Binary</title>
 
+        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:600">
         <link rel="stylesheet" type="text/css" href="~/zero.min.css">
         
         <environment names="Development">
