--- a/Views/Shared/Popup.cshtml
+++ b/Views/Shared/Popup.cshtml
@@ -10,6 +10,7 @@
         
         <title>@ViewData["Title"]</title>
 
+        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:600">
         <link rel="stylesheet" type="text/css" href="~/zero.min.css">
         
         <environment names="Development">
