--- a/Views/Index.cshtml
+++ b/Views/Index.cshtml
@@ -60,7 +60,7 @@
         <header>
             <icon class="logo" data-src="images/banner.svg#logo">01</icon>
             
-            <h1>binary : tech art</h1>
+            <h1>binary : tech art <div class="title-caret"></div></h1>
             
             <navigation data-src="images/banner.svg">
                 <a href="news">news</a>
