FIx #79 Bottom padding for text area only on Windows

--- a/Styles/_media.desktop.scss
+++ b/Styles/_media.desktop.scss
@@ -939,7 +939,7 @@ a.author:hover
     box-shadow: 0 0 ($border-thickness * 3) 0 $primary-light-color;
 }
 
-.ua-win .form-input
+.ua-win textarea.form-input
 {
     padding-bottom: 0;
     padding-top: $border-thickness * 3;
