--- a/Views/Shared/Popup.cshtml
+++ b/Views/Shared/Popup.cshtml
@@ -46,6 +46,7 @@
             <script type="text/javascript" src="~/Scripts/app/factories/commentsFactory.js"></script>
             <script type="text/javascript" src="~/Scripts/app/factories/newsFactory.js"></script>
             <script type="text/javascript" src="~/Scripts/app/factories/usersFactory.js"></script>
+            <script type="text/javascript" src="~/Scripts/app/factories/inputResizeFactory.js"></script>
 
             <script type="text/javascript" src="~/Scripts/app/services/loginService.js"></script>
             <script type="text/javascript" src="~/Scripts/app/services/render2dService.js"></script>
