--- a/Styles/_shared.scss
+++ b/Styles/_shared.scss
@@ -28,7 +28,10 @@ $drop-shadow-dark-color: #777777;
 $drop-shadow-light-color: #999999;
 $drop-shadow-transparent-color: black;
 
-$error-color: indianred;
+$warning-color: #E1b412;
+$error-color: #E11912;
+$highlight-color1: #E11268;
+$highlight-color2: #8B12E1;
 
 /*
  * Fonts
