Fix tag height on windows, agent detection

--- a/Styles/_media.desktop.scss
+++ b/Styles/_media.desktop.scss
@@ -710,8 +710,7 @@ a.author:hover
     cursor: pointer;
 }
 
-.ua-win .tag,
-.lt-ie10 .tag
+.os-win .tag
 {
     padding-top: 4px;
 }
@@ -860,7 +859,7 @@ a.author:hover
     margin-bottom: 2pt;
 }
 
-.ua-win.hi-dpi
+.os-win.hi-dpi
 {
     .comment .metadata
     {
