--- a/Styles/_media.desktop.scss
+++ b/Styles/_media.desktop.scss
@@ -20,8 +20,13 @@ header:before
     width: 1px;
     height: 12px;
     transform: skewX(45deg);
-    box-shadow: 0px 0px 4px $drop-shadow-dark-color;
+    box-shadow: 0 0 4px $drop-shadow-dark-color;
     z-index: 4;
+}
+
+.ie header:before
+{
+    box-shadow: -2px 0 6px $drop-shadow-transparent-color;
 }
 
 /* adorner: right corner cut */
@@ -106,8 +111,14 @@ nav:before
     bottom: 0px;
     width: 100%;
     height: 1px;
-    box-shadow: 0px 0px 2px $drop-shadow-light-color;
+    box-shadow: 0 0 2px $drop-shadow-light-color;
     z-index: -1;
+}
+
+.ie nav:before,
+.edge nav:before
+{
+    box-shadow: 0 0 3px $drop-shadow-transparent-color;
 }
 
 /* adorner: left corner cut */
@@ -116,7 +127,7 @@ nav:after
     content: "";
     position: absolute;
     left: -10px;
-    bottom: -2px;
+    bottom: -3px;
     width: 17px;
     height: 17px;
     background: $background-color;
