Favicon for iOS 2.0+ and Android 2.1+

--- a/Views/Index.cshtml
+++ b/Views/Index.cshtml
@@ -10,6 +10,8 @@
         
         <title>01 Binary</title>
 
+        <link rel="apple-touch-icon-precomposed" href="favicon-152.png">
+
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:600">
         <link rel="stylesheet" type="text/css" href="~/zero.min.css">
         
