--- a/Views/Shared/Popup.cshtml
+++ b/Views/Shared/Popup.cshtml
@@ -10,6 +10,8 @@
         
         <title>@ViewData["Title"]</title>
 
+        <link rel="apple-touch-icon-precomposed" href="favicon-152.png">
+
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:600">
         <link rel="stylesheet" type="text/css" href="~/zero.min.css">
         
