Android and misc favicons

--- a/Views/Index.cshtml
+++ b/Views/Index.cshtml
@@ -13,7 +13,11 @@
         
         <title>01 Binary</title>
 
+        <link rel="shortcut icon" sizes="196x196" href="favicon-196.png">
         <link rel="apple-touch-icon-precomposed" href="favicon-152.png">
+        <link rel="icon" href="favicon-76.png" sizes="76x76">
+        <link rel="icon" href="favicon-57.png" sizes="57x57">
+        <link rel="icon" href="favicon-32.png" sizes="32x32">
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:600">
         <link rel="stylesheet" type="text/css" href="~/zero.min.css">
         
