--- a/Views/Index.cshtml
+++ b/Views/Index.cshtml
@@ -9,15 +9,17 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="msapplication-TileColor" content="#FFFFFF">
-        <meta name="msapplication-TileImage" content="favicon-144.png">
+        <meta name="msapplication-TileImage" content="~/images/favicons/favicon-144.png">
         
         <title>01 Binary</title>
 
-        <link rel="shortcut icon" sizes="196x196" href="favicon-196.png">
-        <link rel="apple-touch-icon-precomposed" href="favicon-152.png">
-        <link rel="icon" href="favicon-76.png" sizes="76x76">
-        <link rel="icon" href="favicon-57.png" sizes="57x57">
-        <link rel="icon" href="favicon-32.png" sizes="32x32">
+        <link rel="shortcut icon" sizes="16x16 24x24 32x32 48x48 64x64" href="~/favicon.ico" type="image/x-icon"/ >
+        <link rel="shortcut icon" sizes="196x196" href="~/images/favicons/favicon-196.png">
+        <link rel="apple-touch-icon-precomposed" href="~/images/favicons/favicon-152.png">
+        <link rel="icon" sizes="76x76" href="~/images/favicons/favicon-76.png">
+        <link rel="icon" sizes="57x57" href="~/images/favicons/favicon-57.png">
+        <link rel="icon" sizes="32x32" href="~/images/favicons/favicon-32.png">
+        
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:600">
         <link rel="stylesheet" type="text/css" href="~/zero.min.css">
         
