--- a/Views/News/Index.cshtml
+++ b/Views/News/Index.cshtml
@@ -83,7 +83,7 @@
         </span>
 
         <!-- Add comment button -->
-        <button class="button-inline"
+        <button class="button-inline top-margin"
                 data-ng-class="{'button-inline-toggled': news.addingComment[@story.id]}"
                 data-ng-click="news.addingComment['@story.id'] = !news.addingComment['@story.id']">
                 + comment
