--- a/Styles/_shared.scss
+++ b/Styles/_shared.scss
@@ -50,25 +50,25 @@ $heading-font-size-large: 13pt;
 $heading-font-size-medium: 11.5pt;
 $heading-font-size-small: 10pt;
 
-$normal-font: "Segoe UI", Verdana, sans-serif;
+$normal-font: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
 $normal-font-size: 10pt;
 $navigation-font-size: $normal-font-size;
 
 $small-font: $normal-font;
 $small-font-size: 9pt;
+$small-font-line-height: 17pt;
 
 $fallback-font: sans-serif;
 
 $background-font: Arial;
 
-.ua-win.hi-dpi
-{
-    $navigation-font-size: 14px;
-    $heading-font-size-large: 20px;
-    $heading-font-size-medium: 17px;
-    $normal-font-size: 14px;
-    $small-font-size: 12.5px;
-}
+$navigation-font-size-win: 11pt;
+$heading-font-size-large-win: 13pt;
+$heading-font-size-medium-win: 12pt;
+$heading-font-size-small-win: 16px;
+$normal-font-size-win: 11pt;
+$small-font-size-win: 10pt;
+$small-font-line-height-win: 19pt;
 
 /*
  * Scalars
